--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
+
 	<servlet>
 		<servlet-name>beermap2-mobile</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -42,9 +42,10 @@
 		<servlet-name>beermap2-android</servlet-name>
 		<url-pattern>/android</url-pattern>
 	</servlet-mapping>
-	
+
 	<servlet-mapping>
 		<servlet-name>beermap2-mobile</servlet-name>
-		<url-pattern>/m</url-pattern>
+		<url-pattern>/m/</url-pattern>
 	</servlet-mapping>
+
 </web-app>
